# Projects

./: .gitignore  README.md  newsfeed_project_1.csv  requirements.txt
.devcontainer/: devcontainer.json
Bank Churn Analysis EDA/: Bank Churn Analysis.ipynb  README.md
Bank Churn Classification/: Bank_Churn_Analysis_(Classification).ipynb  Readme.MD
Electricity Demand Forecasting/: .gitignore  README.md  app.py  config.py  eda.py  feature_engineering.py  predict.py  requirements.txt  train.py
Fraud Detection Log Regression/: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
Fraud Detection Log Regression/model/: Fraud_Detection_Log_model.pkl
SpaceX Falcon9 Landing Prediction/: Data Collection API.ipynb  Data Collection Web Scraping.ipynb  Data Wrangling.ipynb  EDA Data Visualization.ipynb  EDA SQL.ipynb  Readme.md
Tableau Dashboards/: README.md  newsfeed_analysis.twbx
fraud_detection/: Dockerfile  README.md  SETUP.md  app.py  evaluate_models.py  requirements.txt
fraud_detection/.streamlit/: config.toml
fraud_detection/data/: README.md
fraud_detection/model/: Gradient_Boosting.pkl  Isolation_Forest.pkl  Logistic_Regression.pkl  Random_Forest.pkl
fraud_detection/models/: Fraud_Detection_XGB_model.pkl
fraud_detection/notebooks/: Fraud_Detection.ipynb  Fraud_Detection_Notebook.ipynb
