[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-app"
version = "1.0.0"
description = "Fraud Detection System using Logistic Regression"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.6.1",
    "joblib==1.3.2",
    "streamlit==1.28.1"
]

[project.optional-dependencies]
dev = ["jupyter", "matplotlib"]
